<resources>
    <string name="app_name">SisMedCare</string>
    <string name="tv_redirecionar_iniciar_sessao">Iniciar sessão</string>
    <string name="tv_ja_tem_conta">Já tem uma conta?</string>
    <string name="btn_registar">Registar</string>
    <string name="tv_palavra_passe">Palavra-passe</string>
    <string name="tf_hint_email">paciente@my.ipleiria.pt</string>
    <string name="tv_email">Email</string>
    <string name="tv_morada">Morada</string>
    <string name="tv_telemovel">Telemóvel</string>
    <string name="tv_numero_utente">Nº de utente</string>
    <string name="rb_genero_outros">Outros</string>
    <string name="rb_genero_feminino">Feminino</string>
    <string name="rb_genero_masculino">Masculino</string>
    <string name="tv_sexo">Sexo</string>
    <string name="tv_data_nascimento">Data de nascimento</string>
    <string name="tv_nome_completo">Nome completo</string>
    <string name="tv_titulo_registar">Registar</string>
    <string name="btn_terminar_sessao">Terminar sessão</string>
    <string name="tv_perfil_email">Email</string>
    <string name="tv_perfil_telemovel">Telemóvel</string>
    <string name="tv_perfil_contactos">Contactos</string>
    <string name="tv_perfil_morada">Morada</string>
    <string name="tv_perfil_n_utente">Nº de utente</string>
    <string name="tv_perfil_sexo">Sexo</string>
    <string name="tv_perfil_data_nascimento">Data de Nascimento</string>
    <string name="tv_perfil_nome">Nome</string>
    <string name="iv_login_logo">Logo</string>
    <string name="tv_login_iniciar_sessao">Iniciar Sessão</string>
    <string name="tv_login_email">E-mail</string>
    <string name="et_login_hint_email">nome@exemplo.com</string>
    <string name="tv_login_password">Password</string>
    <string name="et_login_hint_password">**************</string>
    <string name="bt_login_iniciar_sessao">Iniciar Sessão</string>
    <string name="tv_login_nao_tem_conta">Não tem conta?</string>
    <string name="tv_login_registe_se">Registe-se</string>
    <string name="tv_consultas_consultas">Consultas</string>
    <string name="tv_consultas_marcacaodeconsultas">Marcação de\nConsultas</string>
    <string name="tv_consultas_verconsultas">Ver\nConsultas</string>
    <string name="menu_home">Home</string>
    <string name="menu_consultas">Consultas</string>
    <string name="menu_prescricoes">Prescrições</string>
    <string name="tv_titulo_atividade_doencas_cronicas">Doenças Crónicas</string>
    <string name="tv_titulo_atividade_alergias">Alergias</string>
</resources>